--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,10 @@ a {
   text-decoration: none;
 }
 
+body {
+  padding-top: 100px;
+}
+
 .main__button {
   background-image: linear-gradient(to top, #227C9D, #61FF7E);
   border: none;
