--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -1,3 +1,25 @@
 body {
-  padding-top: 70px;
+  padding-top: 100px;
 }
+
+ul{
+  list-style: none;
+  li{
+      padding: 1rem;
+  }
+}
+
+a{
+  text-decoration: none;
+}
+
+.main__button{
+  background-image: linear-gradient(to top, $primary-color-blue, $primary-color-green);
+  border: none;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  transition: all 3s ease;
+  &:hover{
+      scale: 1.2;
+    }
+}
+
