--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+$font-family-base: "Montserrat", sans-serif;
+
 body {
-  padding-top: 100px;
+  padding-top: 120px;
 }
 
 ul{
@@ -22,4 +25,3 @@ a{
       scale: 1.2;
     }
 }
-
