--- a/scss/_resets.scss
+++ b/scss/_resets.scss
@@ -1,6 +1,8 @@
 *{
+    font-family: 'Montserrat', sans-serif;
     margin: 0;
     padding: 0;
     box-sizing:border-box;
+    outline: none;
 }
 
