update contenidos: textos, icono e imagenes

--- a/scss/_resaltar.scss
+++ b/scss/_resaltar.scss
@@ -10,3 +10,11 @@
             }
     }
 }
+
+.recorridos--list{
+    color: $primary-color-blue;
+    font-weight: map-get($font-weights, bold);
+    &:hover {@include theme(true);
+        scale: 1.1;
+    }
+}
