--- a/css/style.css
+++ b/css/style.css
@@ -24,12 +24,22 @@ a {
 
 .main__button {
   background-image: linear-gradient(to top, #227C9D, #61FF7E);
-  border: none;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   transition: all 3s ease;
 }
 .main__button:hover {
   scale: 1.2;
+}
+
+.appstore__icon {
+  transition: all 3s ease;
+}
+.appstore__icon:hover {
+  scale: 1.2;
+}
+
+.card {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .navbar {
@@ -39,7 +49,6 @@ a {
 .navbar .navbar__button {
   background-color: #227C9D;
   background-image: linear-gradient(to top, rgba(255, 255, 255, 0.5), #61FF7E);
-  border: none;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   transition: all 3s ease;
 }
@@ -58,6 +67,15 @@ footer {
   font-weight: 700;
 }
 .article__active--intro:hover {
+  color: #61FF7E;
+  scale: 1.1;
+}
+
+.recorridos--list {
+  color: #227C9D;
+  font-weight: 700;
+}
+.recorridos--list:hover {
   color: #61FF7E;
   scale: 1.1;
 }
