--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -18,10 +18,20 @@ a{
 
 .main__button{
   background-image: linear-gradient(to top, $primary-color-blue, $primary-color-green);
-  border: none;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: $box-shadow-custom;
   transition: all 3s ease;
   &:hover{
       scale: 1.2;
     }
+}
+
+.appstore__icon{
+  transition: all 3s ease;
+  &:hover{
+      scale: 1.2;
+    }
+}
+
+.card{
+  box-shadow: $box-shadow-custom;
 }
